# AROGYA

./: .env.example  Makefile  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
apps/api/api/: routes_upload.py
apps/api/schemas/: upload.py
scripts/: seed_demo_data.py
scripts/.cph/: .seed_demo_data.py_d4f639c83969bf301770047a0b7e4ecf.prob
src/arogya/multimodal/: image_pipeline.py  pdf_pipeline.py  text_pipeline.py
src/arogya/rag/: chunking.py  citation_builder.py  embeddings.py  retriever.py
tests/unit/: test_pdf_pipeline.py
