[project]
name = "arogya"
version = "0.1.0"
description = "AI Medical Assistant"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "streamlit",
    "pydantic",
    "pydantic-settings",
    "PyPDF2",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
]
